# polimoney

./: .gitignore  ADR.md  CODE_REVIEW_GUIDELINES.md  CONTRIBUTING.md  DISCUSSION.md  LICENSE  PROJECTS.md  README.md  biome.json  lefthook.yml  next.config.ts  package-lock.json  package.json  type.d.ts
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  pr-continuation.md  pr-introduction.md  pr.md
.github/workflows/: assign-bot.yml  lint-python.yml  lint.yml  nextjs-check.yml  nextjs.yml
app/: data.ts  global.css  layout.tsx  page.tsx  robots.txt
app/[slug]/: page.tsx
app/demo-example/: page.tsx
app/demo-koki-fujisaki-2022/: page.tsx
app/demo-koki-fujisaki-2023/: page.tsx
app/demo-koki-fujisaki-2024/: page.tsx
app/demo-ryosuke-idei-2024/: page.tsx
app/demo-takahiro-anno-2024/: page.tsx
app/reports/[id]/: page.tsx
components/: BoardBalance.tsx  BoardChart.tsx  BoardChartFixed.tsx  BoardContainer.tsx  BoardExpense.tsx  BoardIncome.tsx  BoardMetadata.tsx  BoardOldTransactions.tsx  BoardProfile.tsx  BoardSummary.tsx  BoardTransactions.tsx  Footer.tsx  Header.tsx  Notice.tsx
components/ui/: provider.tsx
data/: README_DEMO_PAGE.md  converter.ts  demo-example.ts  demo-kokifujisaki.ts  demo-ryosukeidei.ts  demo-takahiroanno.ts  example.ts  sample_input.json  sample_output.json
docs/: DEVIN_COLLABORATION.md  Home.md  wiki_ja.md
docs/adr/: ADR.md
docs/wiki_ja/: data_model.md  deployment.md  overview.md  pdf_preprocessing_issue.md  project_structure.md
models/: type.d.ts
public/reports/: demo-example.json
scripts/: create-json-for-web.sh
tools/: .gitignore  README.md  README_download_seijishikin.md  analyze_image.py  analyze_image_gemini.py  generate-og-images.js  image_preprocess.py  merge_jsons.py  pdf_to_images.py  preprocess.py  pyproject.toml  test_llm_providers.py
tools/analyzer/: __init__.py  client.py  config.py  file_io.py  image_processor.py  llm_client.py  prompt.py
tools/downloader/: README.md  __init__.py  config.py  downloader.py  main.py  metadata.py  page_parser.py  pdf_downloader.py  robotparser.py  utils.py
tools/tests/: conftest.py  test_merge_jsons.py  test_metadata.py  test_page_parser.py  test_pdf_downloader.py
tools/tests/downloader/: __init__.py  test_metadata.py  test_pdf_downloader.py
